--- a/MODAMSWeb/Areas/Users/Views/Stores/Index.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Stores/Index.cshtml
@@ -1,60 +1,61 @@
 ﻿@using Microsoft.AspNetCore.Mvc.Localization
+@using System.Globalization
 
 @model MODAMS.Models.ViewModels.Dto.StoresDTO
 @inject IViewLocalizer Localizer
 
 <style>
     .card.divBackground {
-    position: relative;
-    overflow: hidden; /* Ensure the pseudo-element doesn't cause overflow */
+        position: relative;
+        overflow: hidden; /* Ensure the pseudo-element doesn't cause overflow */
     }
 
-    .card.divBackground::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-image: url('../assets/images/brand/FGS_Small4.png');
-    background-repeat: no-repeat;
-    background-position: center; /* Center the background image */
-    background-size: 15%; /* Increase the size by 10% */
-    opacity: 0.5; /* Adjust the opacity to your preference */
-    pointer-events: none; /* Allow interaction with content behind the pseudo-element */
-    }
+        .card.divBackground::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-image: url('../assets/images/brand/FGS_Small4.png');
+            background-repeat: no-repeat;
+            background-position: center; /* Center the background image */
+            background-size: 15%; /* Increase the size by 10% */
+            opacity: 0.5; /* Adjust the opacity to your preference */
+            pointer-events: none; /* Allow interaction with content behind the pseudo-element */
+        }
 
     .tooltip-container {
-    position: relative;
-    display: inline-block;
-    cursor: pointer;
-    color: #333;
-    font-size: 16px;
-    padding: 10px;
+        position: relative;
+        display: inline-block;
+        cursor: pointer;
+        color: #333;
+        font-size: 16px;
+        padding: 10px;
     }
 
     .tooltip {
-    visibility: hidden;
-    width: 240px; /* Adjust the width as needed */
-    background-color: #fff;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
-    position: absolute;
-    z-index: 1;
-    top: 125%;
-    left: 50%;
-    margin-left: -120px; /* Half of the width */
-    opacity: 0;
-    transition: opacity 0.3s, visibility 0.3s;
+        visibility: hidden;
+        width: 240px; /* Adjust the width as needed */
+        background-color: #fff;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        border-radius: 8px;
+        position: absolute;
+        z-index: 1;
+        top: 125%;
+        left: 50%;
+        margin-left: -120px; /* Half of the width */
+        opacity: 0;
+        transition: opacity 0.3s, visibility 0.3s;
     }
 
     .cardTooltip {
-    padding: 16px;
+        padding: 16px;
     }
 
     .tooltip-container:hover .tooltip {
-    visibility: visible;
-    opacity: 1;
+        visibility: visible;
+        opacity: 1;
     }
 </style>
 
@@ -87,6 +88,9 @@
         </div>
     </div>
 </div>
+@{
+    bool _isSomali = CultureInfo.CurrentUICulture.Name == "so";
+}
 <div class="row">
     <div class="col-md-12">
         <div clsas="card">
@@ -100,7 +104,6 @@
                                     foreach (var store in Model.vwStores)
                                     {
                                         var bgType = (store.StoreType == 1) ? "bg-info" : "bg-info-transparent";
-                                        var sStoreType = (store.StoreType == 1) ? "<span class=\"text-primary text-bold\">Primary Store</span>" : "Secondary Store";
                                         <div class="col-sm-12 col-md-12 col-lg-12 col-xl-4">
                                             <div class="card divShadow divBackground">
                                                 <div class="card-body">
@@ -113,8 +116,12 @@
                                                                             <svg xmlns="http://www.w3.org/2000/svg" class="w-icn text-white" enable-background="new 0 0 24 24" viewBox="0 0 24 24"><path d="M4.2069702,12l5.1464844-5.1464844c0.1871338-0.1937866,0.1871338-0.5009155,0-0.6947021C9.1616211,5.9602051,8.8450928,5.9547119,8.6464844,6.1465454l-5.5,5.5c-0.000061,0-0.0001221,0.000061-0.0001221,0.0001221c-0.1951904,0.1951904-0.1951294,0.5117188,0.0001221,0.7068481l5.5,5.5C8.7401123,17.9474487,8.8673706,18.0001831,9,18c0.1325684,0,0.2597046-0.0526733,0.3533936-0.1464233c0.1953125-0.1952515,0.1953125-0.5118408,0.0001221-0.7070923L4.2069702,12z M20.8534546,11.6465454l-5.5-5.5c-0.1937256-0.1871948-0.5009155-0.1871948-0.6947021,0c-0.1986084,0.1918335-0.2041016,0.5083618-0.0122681,0.7069702L19.7930298,12l-5.1465454,5.1464844c-0.09375,0.09375-0.1464233,0.2208862-0.1464233,0.3534546C14.5,17.776062,14.723877,17.999939,15,18c0.1326294,0.0001221,0.2598267-0.0525513,0.3534546-0.1464844l5.5-5.5c0.000061-0.000061,0.0001221-0.000061,0.0001831-0.0001221C21.0487671,12.1581421,21.0487061,11.8416748,20.8534546,11.6465454z"></path></svg>
                                                                         </div>
                                                                         <div class="ms-1">
-                                                                            <h6 class="mb-1"> <a class="float-start text-bold" asp-area="Users" asp-controller="Stores" asp-action="StoreDetails" asp-route-id="@store.Id">@store.Name</a></h6>
-                                                                            <span class="text-muted pe-2 fs-11 float-start mt-1">@Localizer[sStoreType]</span>
+                                                                            <h6 class="mb-1"> <a class="float-start text-bold" asp-area="Users" asp-controller="Stores" asp-action="StoreDetails" asp-route-id="@store.Id">@(_isSomali ? store.NameSo : store.Name)</a></h6>
+                                                                            <span class="text-muted pe-2 fs-11 float-start mt-1">
+                                                                                <span class="@(store.StoreType == 1 ? "text-primary text-bold" : "")">
+                                                                                    @(store.StoreType == 1 ? Localizer["Primary Store"] : Localizer["Secondary Store"])
+                                                                                </span>
+                                                                            </span>
 
                                                                         </div>
                                                                     </div>
@@ -133,7 +140,7 @@
                                                                             {
                                                                                 foreach (var emp in storeEmps)
                                                                                 {
-                                                                                    string sContent = $"{emp.Email} <br /> {emp.Role}";    
+                                                                                    string sContent = $"{emp.Email} <br /> {emp.Role}";
 
                                                                                     <a data-bs-container="body"
                                                                                        data-bs-content="@Html.Raw(sContent)"
@@ -167,11 +174,11 @@
                                                                 <div class="row wp-100">
                                                                     <div class="col-md-6">
                                                                         <span class="text-muted d-block float-start">@Localizer["InitialCost"]</span><br />
-                                                                        <span class="text-primary text-bold float-start">@Math.Round(Convert.ToDecimal(store.TotalCost),0).ToString("N0")</span>
+                                                                        <span class="text-primary text-bold float-start">@Math.Round(Convert.ToDecimal(store.TotalCost), 0).ToString("N0")</span>
                                                                     </div>
                                                                     <div class="col-md-6">
                                                                         <span class="text-muted d-block float-end">@Localizer["CurrentValue"]</span><br />
-                                                                        <span class="text-primary text-bold float-end">@Math.Round(Convert.ToDecimal(store.DepCost),0).ToString("N0")</span>
+                                                                        <span class="text-primary text-bold float-end">@Math.Round(Convert.ToDecimal(store.DepCost), 0).ToString("N0")</span>
                                                                     </div>
                                                                 </div>
                                                             </div>
@@ -184,7 +191,7 @@
                                 }
                                 else
                                 {
-                                    <div class="col-md-12 text-center">No stores available!</div>
+                                    <div class="col-md-12 text-center">@Localizer["NoStoresAvailable"]</div>
                                 }
                             }
 
@@ -205,9 +212,23 @@
 <section id="dvStoreEmployeesData" style="display:none;">@Json.Serialize(Model.storeEmployees)</section>
 @section scripts {
     <script src="~/js/user_stores_index.js"></script>
-
     <script>
+        const _isSomali = getCurrentLanguage() === "so" ? true : false;
+        const localizer = {
+                lblPrimaryStore: "@Localizer["Primary Store"]",
+                lblSecondaryStore: "@Localizer["Secondary Store"]",
+                lblNoStoresAvailable: "@Localizer["NoStoresAvailable"]",
+                lblTotalAssets: "@Localizer["TotalAssets"]",
+                lblInitialCost: "@Localizer["InitialCost"]",
+                lblCurrentValue: "@Localizer["CurrentValue"]",
+                lblMembers: "@Localizer["Members"]"
+            };
         $(document).ready(() => {
+            
+            $("#txtSearchStore").on("input", () => {
+                searchStore();
+            });
+            
             $('.select2').select2({
                 dropdownParent: $("#mdl-asset-report")
             });
@@ -216,6 +237,95 @@
                 $('#frmAssetReport').submit();
             });
         });
+
+        const searchStore = () => {
+
+            var sData = $("#dvStoresData").html();
+            var Data = JSON.parse(sData);
+            console.log(Data);
+
+            var searchKeyword = $("#txtSearchStore").val();
+            var filteredData = $.grep(Data, function (item) {
+                var regex = new RegExp(searchKeyword, "i");
+                return regex.test(item.name);
+            });
+
+            if (filteredData.length > 0) {
+                var sHtml = '';
+                filteredData.forEach((e) => {
+                    const bgType = e.storeType == 1 ? 'bg-primary' : 'bg-info-transparent';
+                    const storeTypeText = e.storeType === 1
+                        ? `<span class="text-primary text-bold">${localizer.lblPrimaryStore}</span>`
+                        : localizer.lblSecondaryStore;
+
+                    const sEmployeeHtml = getEmployeelist(e.id);
+                    
+                    sHtml += `
+                    <div class="col-sm-12 col-md-12 col-lg-12 col-xl-4">
+                        <div class="card divShadow divBackground">
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <div class="row">
+                                            <div class="col">
+                                                <div class="d-sm-flex align-items-center">
+                                                    <div class="avatar mb-2 p-2 lh-1 mb-sm-0 avatar-md rounded-circle ${bgType} me-2">
+                                                        <svg xmlns="http://www.w3.org/2000/svg" class="w-icn text-white" enable-background="new 0 0 24 24" viewBox="0 0 24 24"><path d="M4.2069702,12l5.1464844-5.1464844c0.1871338-0.1937866,0.1871338-0.5009155,0-0.6947021C9.1616211,5.9602051,8.8450928,5.9547119,8.6464844,6.1465454l-5.5,5.5c-0.000061,0-0.0001221,0.000061-0.0001221,0.0001221c-0.1951904,0.1951904-0.1951294,0.5117188,0.0001221,0.7068481l5.5,5.5C8.7401123,17.9474487,8.8673706,18.0001831,9,18c0.1325684,0,0.2597046-0.0526733,0.3533936-0.1464233c0.1953125-0.1952515,0.1953125-0.5118408,0.0001221-0.7070923L4.2069702,12z M20.8534546,11.6465454l-5.5-5.5c-0.1937256-0.1871948-0.5009155-0.1871948-0.6947021,0c-0.1986084,0.1918335-0.2041016,0.5083618-0.0122681,0.7069702L19.7930298,12l-5.1465454,5.1464844c-0.09375,0.09375-0.1464233,0.2208862-0.1464233,0.3534546C14.5,17.776062,14.723877,17.999939,15,18c0.1326294,0.0001221,0.2598267-0.0525513,0.3534546-0.1464844l5.5-5.5c0.000061-0.000061,0.0001221-0.000061,0.0001831-0.0001221C21.0487671,12.1581421,21.0487061,11.8416748,20.8534546,11.6465454z"></path></svg>
+                                                    </div>
+                                                    <div class="ms-1">
+                                                        <h6 class="mb-1">
+                                                        <a class="float-start text-bold" href="/Users/Stores/StoreDetails/${e.id}">${e.nameSo}</a></h6>
+                                                        <span class="text-muted pe-2 fs-11 float-start mt-1">
+                                                            ${storeTypeText}
+                                                        </span>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-12 mt-4">
+                                        <div class="row align-items-center">
+                                            <div class="col">
+                                                <p class="m-0 mb-2">${localizer.lblMembers}</p>
+                                                <div class="avatar-list avatar-list-stacked">
+                                                ${sEmployeeHtml}
+                                                </div>
+                                            </div>
+                                            <div class="col-auto">
+                                                <p class="mb-0">
+                                                    <span class="text-muted d-block">${localizer.lblTotalAssets}</span>
+                                                    <span class="text-primary text-bold float-end">${e.totalCount}</span>
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-12 mt-4">
+                                        <div class="d-f-ai-c-jc-c">
+                                            <div class="row wp-100">
+                                                <div class="col-md-6">
+                                                    <span class="text-muted d-block float-start">${localizer.lblInitialCost}</span><br />
+                                                    <span class="text-primary text-bold float-start">${Math.round(e.totalCost, 2).toLocaleString()}</span>
+                                                </div>
+                                                <div class="col-md-6">
+                                                    <span class="text-muted d-block float-end">${localizer.lblCurrentValue}</span><br />
+                                                    <span class="text-primary text-bold float-end">${Math.round(e.depCost, 2).toLocaleString()}</span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    `
+                });
+
+                $("#dvMainRow").html("").html(sHtml);
+            } else {
+                //$("#dvMainRow").html(`<div class="alert alert-warning text-center">${localizer.lblNoStoresAvailable}</div>`);
+            }
+        };
+
     </script>
 
     <script>
