--- a/MODAMSWeb/Areas/Users/Views/Transfers/Index.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Transfers/Index.cshtml
@@ -161,8 +161,8 @@
                                                                             <tr>
                                                                                 <td>@nCounter</td>
                                                                                 <td>@transfer.TransferDate?.ToString("dd-MMM-yyyy")</td>
-                                                                                <td>@transfer.StoreFrom</td>
-                                                                                <td>@transfer.StoreTo</td>
+                                                                                <td>@(_isSomali ? transfer.StoreFromSo : transfer.StoreFrom)</td>
+                                                                                <td>@(_isSomali ? transfer.StoreToSo : transfer.StoreTo)</td>
                                                                                 <td>@transfer.NumberOfAssets</td>
                                                                                 <td>@(_isSomali ? transfer.StatusSo : transfer.Status)</td>
                                                                                 <td class="text-muted fs-15 fw-semibold">
@@ -441,7 +441,7 @@
                 if (e.transferStatusId != 1) {
                     sDisabled = "disabled";
                 }
-                
+
                 if (id > 0) {
                     if (e.transferStatusId == id) {
                         sHtml += `<tr>
