--- a/MODAMSWeb/Areas/Users/Views/Transfers/CreateTransfer.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Transfers/CreateTransfer.cshtml
@@ -234,8 +234,14 @@
         $(document).ready(function () {
             hideMenu();
             sData = '@Html.Raw(Json.Serialize(Model.Assets))';
-            Data = JSON.parse(sData);
+            var result = tryParseJson(sData,"Assets");
 
+            if (result.status === "error") {
+                Notify("error", result.message);
+                return;
+            }
+            Data = result.data;
+            
             $('.select2').select2();
 
             $('.picker').datepicker({
